samples/_failures_safe/1761438542_70db1a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_931905ff.c: In function ‘main’:
./samples/SAFE/__tmp_931905ff.c:146:9: error: expected declaration or statement at end of input
  146 |         destroy_matrix(&mat2);
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_931905ff.c:146:9: error: expected declaration or statement at end of input
